[package]
name = "adder"
version = "0.1.0"
edition = "2021"

[lib]
name = "adder"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "cobra"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sexp = "1.1.4"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
im = "15.1.0"
prettydiff = "0.9.0"

